# tree-sitter-template-toolkit

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-template-toolkit.pc.in
bindings/c/tree_sitter/: tree-sitter-template-toolkit.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_template_toolkit/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTemplateToolkitTests/: TreeSitterTemplateToolkitTests.swift
corpus/: test.txt
src/: grammar.json  node-types.json  parser.c
